hphp/test/zend/bad/ext/standard/tests/file/bug41874_1.php
<?php
popen("1:\\non_existent", "r");
?>